fix: :bug: ajuste do scrollbar

--- a/styles/scss/_conselhos.scss
+++ b/styles/scss/_conselhos.scss
@@ -5,28 +5,31 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  padding-right: 5px;
-  &::-webkit-scrollbar {
-    width: 5px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: $cor-cinco;
-  }
 
   .main__lista {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 1rem;
     width: 100%;
+    height: 100%;
+    max-height: 80vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $cor-cinco;
+    }
 
     .main__lista-item {
       @include aplicar_font($font-principal, 1rem, 400, $cor-seis);
@@ -40,6 +43,7 @@
       // Garantir que ocupe toda a largura disponível
       width: 100%;
       box-sizing: border-box;
+      overflow: visible;
 
       .main__lista-item-botao {
         width: 2.5rem;
