--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,26 +231,28 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  padding-right: 5px;
-}
-.main__section::-webkit-scrollbar {
-  width: 5px;
-}
-.main__section::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-.main__section::-webkit-scrollbar-thumb {
-  background-color: #777351;
 }
 .main__section .main__lista {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   gap: 1rem;
   width: 100%;
+  height: 100%;
+  max-height: 80vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+}
+.main__section .main__lista::-webkit-scrollbar {
+  width: 5px;
+}
+.main__section .main__lista::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.main__section .main__lista::-webkit-scrollbar-thumb {
+  background-color: #777351;
 }
 .main__section .main__lista .main__lista-item {
   font-family: "Poppins", sans-serif;
@@ -265,6 +267,7 @@ body {
   border-radius: 0.5rem;
   width: 100%;
   box-sizing: border-box;
+  overflow: visible;
 }
 .main__section .main__lista .main__lista-item .main__lista-item-botao {
   width: 2.5rem;
